--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         style="background: rgba(0, 0, 0, .2);">
                         <div class="container">
                             <div class="row justify-content-start">
-                                <div class="col-10 col-lg-8">
+                                <div class="col-11 col-lg-8">
                                     <h1 class="display-2 text-white animated slideInDown mb-4">Welcome to School of ABC!
                                     </h1>
                                     <p class="fs-5 fw-medium text-white mb-4 pb-2">Engaging preschool education at
@@ -127,7 +127,7 @@
                         style="background: rgba(0, 0, 0, .2);">
                         <div class="container">
                             <div class="row justify-content-start">
-                                <div class="col-10 col-lg-8">
+                                <div class="col-11 col-lg-8">
                                     <h1 class="display-2 text-white animated slideInDown mb-4">Make A Brighter Future
                                         For Your Child</h1>
                                     <p class="fs-5 fw-medium text-white mb-4 pb-2">Explore, learn, thrive at School of
@@ -225,7 +225,7 @@
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <h1 class="mb-4">Learn More About Our Work And Our Cultural Activities</h1>
+                        <h1 class="mb-4">Learn More About Our Method Of Study And Our Cultural Activities</h1>
                         <p>Learn more about our enriching curriculum and vibrant cultural activities. Our innovative
                             approach emphasizes hands-on learning, nurturing creativity, and holistic development.
                             Explore themed teaching, smart class technologies, and life skills education.
