--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <h1 class="mb-4">Learn More About Our Work And Our Cultural Activities</h1>
+                        <h1 class="mb-4">Learn More About Our Method Of Study And Our Cultural Activities</h1>
                         <p>Learn more about our enriching curriculum and vibrant cultural activities. Our innovative
                             approach emphasizes hands-on learning, nurturing creativity, and holistic development.
                             Explore themed teaching, smart class technologies, and life skills education.
