--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                                             Camp</li>
                                     </ul>
                                 </div>
-                                <a class="btn btn-primary py-3 px-5" href="">Get Started Now<i
+                                <a class="btn btn-primary py-3 px-5" href="contact.html">Get Started Now<i
                                         class="fa fa-arrow-right ms-2"></i></a>
                             </div>
                         </div>
