--- a/Day-Care.html
+++ b/Day-Care.html
@@ -81,7 +81,7 @@
                     <a href="about.html" class="nav-item nav-link">About Us</a>
                     <a href="Activities.html" class="nav-item nav-link">Activities</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Programs</a>
+                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Programs</a>
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
                             <a href="Infant-Care.html" class="dropdown-item">Infant Care</a>
                             <a href="Toddlers.html" class="dropdown-item">Toddlers </a>
@@ -92,7 +92,7 @@
                             <a href="Day-Care.html" class="dropdown-item">Day Care on Demand</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
                 <a href="#" class="btn btn-primary rounded-pill px-3 d-none d-lg-block"
                     onclick="downloadFile('img/Brochure ABC 2023 (8).docx', 'Brochure ABC 2023 (8).docx')">Download
@@ -105,12 +105,12 @@
         <!-- Page Header End -->
         <div class="container-xxl py-5 page-header position-relative mb-5">
             <div class="container py-5">
-                <h1 class="display-2 text-white animated slideInDown mb-4">Contact Us</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4">Classes</h1>
                 <nav aria-label="breadcrumb animated slideInDown">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
                         <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Contact Us</li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Classes</li>
                     </ol>
                 </nav>
             </div>
@@ -118,107 +118,45 @@
         <!-- Page Header End -->
 
 
-        <!-- Contact Start -->
+        <!-- Classes Start -->
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Get In Touch</h1>
-                    <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit
-                        eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                    <h1 class="mb-3">Day Care on Demand
+                    </h1>
+                    <p>Age Group: 2 to 8 Years</p>
                 </div>
-                <div class="row g-4 mb-5">
-                    <div class="col-md-6 col-lg-4 text-center wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4"
-                            style="width: 75px; height: 75px;">
-                            <i class="fa fa-map-marker-alt fa-2x text-primary"></i>
-                        </div>
-                        <h6>Palkulangara,Pettah Thiruvananthapuram</h6>
-                    </div>
-                    <div class="col-md-6 col-lg-4 text-center wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4"
-                            style="width: 75px; height: 75px;">
-                            <i class="fa fa-envelope-open fa-2x text-primary"></i>
-                        </div>
-                        <h6><a style="color: black;" href="mailto:theschoolofabc@gmail.com">theschoolofabc@gmail.com</a></h6>
-                    </div>
-                    <div class="col-md-6 col-lg-4 text-center wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4"
-                            style="width: 75px; height: 75px;">
-                            <i class="fa fa-phone-alt fa-2x text-primary"></i>
-                        </div>
-                        <h6><a style="color: black;" href="tel:994608600">+91 994608600</a>,<a style="color: black;"
-                                href="tel:9188027014">+91 9188027014</a></h6>
 
+                <div class="container-xxl py-5">
+                    <div class="container">
+                        <div class="bg-light rounded">
+                            <div class="row g-0">
 
-                    </div>
-                </div>
-                <div class="bg-light rounded">
-                    <div class="row g-0">
-                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                            <div class="h-100 d-flex flex-column justify-content-center p-5">
-                                <h1 class="mb-4">Make Appointment</h1>
-                                <form name="contact-form" method="post">
-                                    <div class="row g-3">
-                                        <div class="col-sm-6">
-                                            <div class="form-floating">
-                                                <input type="text" class="form-control border-0" id="gname"
-                                                    placeholder="Gurdian Name" name="Gurdian Name" required>
-                                                <label for="gname">Gurdian Name</label>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-floating">
-                                                <input type="email" class="form-control border-0" id="gmail"
-                                                    placeholder="Gurdian Email" name="Gurdian Email" required>
-                                                <label for="gmail">Gurdian Email</label>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-floating">
-                                                <input type="text" class="form-control border-0" id="cname"
-                                                    placeholder="Child Name" name="Child Name" required>
-                                                <label for="cname">Child Name</label>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-floating">
-                                                <input type="text" class="form-control border-0" id="cage"
-                                                    placeholder="Child Age" name="Child Age" required>
-                                                <label for="cage">Child Age</label>
-                                            </div>
-                                        </div>
-                                        <div class="col-12">
-                                            <div class="form-floating">
-                                                <textarea class="form-control border-0"
-                                                    placeholder="Leave a message here" id="message"
-                                                    style="height: 100px" name="Message" required></textarea>
-                                                <label for="message">Message</label>
-                                            </div>
-                                        </div>
-                                        <div class="col-12">
-                                            <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
-                                        </div>
+                                <div class="wow fadeIn" data-wow-delay="0.5s">
+                                    <div class="h-100 d-flex flex-column justify-content-center p-5">
+                                        <h1 class="mb-4">Day Care on Demand</h1>
+                                        <p>Daycare on Demand" – designed to meet the needs of every family. Whether you
+                                            require daycare for your toddlers or post-school care for older children,
+                                            our centers now offer flexible hours to accommodate your schedule. With
+                                            "Daycare on Demand," you can choose the hours that work best for you –
+                                            whether it's just a few hours, a few days, a week, or even a month.</p>
+                                        
                                     </div>
-                                </form>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
-                            <div class="position-relative h-100">
-                                <!-- <iframe class="position-relative rounded w-100 h-100"
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                                    frameborder="0" style="min-height: 400px; border:0;" allowfullscreen=""
-                                    aria-hidden="false" tabindex="0"></iframe> -->
-                                <iframe class="position-relative rounded w-100 h-100"
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7892.252706341614!2d76.92779223813793!3d8.487093616216617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bb9b292b0ee9%3A0x6649b9d9555decca!2sPalkulangara%2C%20Thiruvananthapuram%2C%20Kerala%20695024%2C%20India!5e0!3m2!1sen!2sbd!4v1713779936542!5m2!1sen!2sbd"
-                                    style="min-height: 400px; border:0;" allowfullscreen="" loading="lazy"
-                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
-        <!-- Contact End -->
+        <!-- Classes End -->
+
+
+
+
+
+
 
        <!-- Footer Start -->
        <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
