--- a/After-School.html
+++ b/After-School.html
@@ -78,10 +78,10 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
                     <a href="index.html" class="nav-item nav-link ">Home</a>
-                    <a href="about.html" class="nav-item nav-link active">About Us</a>
+                    <a href="about.html" class="nav-item nav-link">About Us</a>
                     <a href="Activities.html" class="nav-item nav-link">Activities</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Programs</a>
+                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Programs</a>
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
                             <a href="Infant-Care.html" class="dropdown-item">Infant Care</a>
                             <a href="Toddlers.html" class="dropdown-item">Toddlers </a>
@@ -105,12 +105,12 @@
         <!-- Page Header End -->
         <div class="container-xxl py-5 page-header position-relative mb-5">
             <div class="container py-5">
-                <h1 class="display-2 text-white animated slideInDown mb-4">About Us</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4">Classes</h1>
                 <nav aria-label="breadcrumb animated slideInDown">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
                         <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">About Us</li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Classes</li>
                     </ol>
                 </nav>
             </div>
@@ -118,130 +118,57 @@
         <!-- Page Header End -->
 
 
-         <!-- Facilities Start -->
-         <div class="container-xxl py-5" id="Facilities">
-            <div class="container">
-                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">School Facilities</h1>
-                    <p>Explore our modern facilities: interactive smart classes, Montessori labs, outdoor play areas,
-                        library, and nutritious meals. Enhancing learning experiences daily.</p>
-                </div>
-                <div class="row g-4">
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="facility-item">
-                            <div class="facility-icon bg-primary">
-                                <span class="bg-primary"></span>
-                                <i class="fa fa-bus-alt fa-3x text-primary"></i>
-                                <span class="bg-primary"></span>
-                            </div>
-                            <div class="facility-text bg-primary">
-                                <h3 class="text-primary mb-3">School Bus</h3>
-                                <p class="mb-0">Convenient transportation for students ensuring safety and punctuality
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="facility-item">
-                            <div class="facility-icon bg-success">
-                                <span class="bg-success"></span>
-                                <i class="fa fa-futbol fa-3x text-success"></i>
-                                <span class="bg-success"></span>
-                            </div>
-                            <div class="facility-text bg-success">
-                                <h3 class="text-success mb-3">Playground</h3>
-                                <p class="mb-0">Safe and fun outdoor space for recreation and physical development
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="facility-item">
-                            <div class="facility-icon bg-warning">
-                                <span class="bg-warning"></span>
-                                <i class="fa fa-home fa-3x text-warning"></i>
-                                <span class="bg-warning"></span>
-                            </div>
-                            <div class="facility-text bg-warning">
-                                <h3 class="text-warning mb-3">Spacious Classrooms</h3>
-                                <p class="mb-0">Comfortable learning spaces for interactive and engaging activities
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <div class="facility-item">
-                            <div class="facility-icon bg-info">
-                                <span class="bg-info"></span>
-                                <i class="fa fa-chalkboard-teacher fa-3x text-info"></i>
-                                <span class="bg-info"></span>
-                            </div>
-                            <div class="facility-text bg-info">
-                                <h3 class="text-info mb-3">Smart Classrooms</h3>
-                                <p class="mb-0">Innovative technology enhancing interactive learning experiences for
-                                    students
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Facilities End -->
-
-
-        <!-- About Start -->
+        <!-- Classes Start -->
         <div class="container-xxl py-5">
             <div class="container">
-                <div class="row g-5 align-items-center">
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <h1 class="mb-4">Learn More About Our Method Of Study And Our Cultural Activities</h1>
-                        <p>Learn more about our enriching curriculum and vibrant cultural activities. Our innovative
-                            approach emphasizes hands-on learning, nurturing creativity, and holistic development.
-                            Explore themed teaching, smart class technologies, and life skills education.
-                        </p>
-                        <p class="mb-4"> Engage in
-                            Montessori activities and exciting extracurriculars like music, dance, and sports. Join us
-                            to celebrate diverse cultures through events, talent showcases, and field trips. At School
-                            of ABC, we prioritize each child's growth, ensuring a stimulating and supportive
-                            environment. Discover how we prepare young learners for a bright future filled with
-                            confidence and curiosity.</p>
-                        <div class="row g-4 align-items-center">
-                            <div class="col-sm-6">
-                                <a class="btn btn-primary rounded-pill py-3 px-5" href="about.html">Read More</a>
-                            </div>
-                            <!-- <div class="col-sm-6">
-                                <div class="d-flex align-items-center">
-                                    <img class="rounded-circle flex-shrink-0" src="img/user.jpg" alt=""
-                                        style="width: 45px; height: 45px;">
-                                    <div class="ms-3">
-                                        <h6 class="text-primary mb-1">Jhon Doe</h6>
-                                        <small>CEO & Founder</small>
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                    <h1 class="mb-3">After-School Program
+                    </h1>
+                    <p>Age Group: 2 to 8 Years</p>
+                </div>
+
+                <div class="container-xxl py-5">
+                    <div class="container">
+                        <div class="bg-light rounded">
+                            <div class="row g-0">
+
+                                <div class="wow fadeIn" data-wow-delay="0.5s">
+                                    <div class="h-100 d-flex flex-column justify-content-center p-5">
+                                        <h1 class="mb-4">After-School Program</h1>
+                                        <p>Introducing our After-School Program: Fun and Learning After the Bell Rings!
+                                        </p>
+                                        <h4 class="mb-4">Key areas of development are:</h4>
+                                        <h5 style="color: #8a2be2;">Safe Space, Joyful Engagement</h5>
+                                        <p>Fun and Learning After the Bell Rings! Are you juggling a hectic schedule and
+                                            in need of reliable after-school childcare? Our extended program offers
+                                            flexible options, accommodating various pick-up times to suit your family's
+                                            needs. Here, children can relax, engage in enjoyable activities, and further
+                                            their learning in a stimulating and enriching environment beyond the school
+                                            hours.</p>
+                                        <p>Our program fosters a secure and protected setting where children feel
+                                            comfortable and cared for.Our daycare program caters to children aged 2 to 8
+                                            years, ensuring age-appropriate activities for all.Choose the pick-up time
+                                            that best suits your family's needs.</p>
+
                                     </div>
                                 </div>
-                            </div> -->
-                        </div>
-                    </div>
-                    <div class="col-lg-6 about-img wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="row">
-                            <div class="col-12 text-center">
-                                <img class="img-fluid w-75 rounded-circle bg-light p-3" src="img/about-1.jpg" alt="">
-                            </div>
-                            <div class="col-6 text-start" style="margin-top: -150px;">
-                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/about-2.jpg" alt="">
-                            </div>
-                            <div class="col-6 text-end" style="margin-top: -150px;">
-                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/about-3.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
-        <!-- About End -->
+        <!-- Classes End -->
 
-         <!-- Footer Start -->
-         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+
+
+
+
+
+
+        <!-- Footer Start -->
+        <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-md-4">
