--- a/UKG.html
+++ b/UKG.html
@@ -120,7 +120,7 @@
 
         <!-- Classes Start -->
         <div class="container-xxl py-5">
-            <div class="container">
+            <div>
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                     <h1 class="mb-3">UKG
                     </h1>
@@ -128,12 +128,12 @@
                 </div>
 
                 <div class="container-xxl py-5">
-                    <div class="container">
+                    <div>
                         <div class="bg-light rounded">
                             <div class="row g-0">
 
                                 <div class="wow fadeIn" data-wow-delay="0.5s">
-                                    <div class="h-100 d-flex flex-column justify-content-center p-5">
+                                    <div class="h-100 d-flex flex-column justify-content-center  p-lg-5 p-md-5 p-3">
                                         <h1 class="mb-4">UKG </h1>
                                         <p>Our Montessori III (UKG) curriculum meets the requirements of CBSE/ICSE/NEP
                                             2020. On language and literature front our program aims at developing the
