--- a/Play-Group.html
+++ b/Play-Group.html
@@ -120,7 +120,7 @@
 
         <!-- Classes Start -->
         <div class="container-xxl py-5">
-            <div class="container">
+            <div >
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                     <h1 class="mb-3">Play Group
                     </h1>
@@ -129,12 +129,12 @@
                 </div>
 
                 <div class="container-xxl py-5">
-                    <div class="container">
+                    <div>
                         <div class="bg-light rounded">
                             <div class="row g-0">
 
                                 <div class="wow fadeIn" data-wow-delay="0.5s">
-                                    <div class="h-100 d-flex flex-column justify-content-center p-5">
+                                    <div class="h-100 d-flex flex-column justify-content-center  p-lg-5 p-md-5 p-3">
                                         <h1 class="mb-4">Play Group</h1>
                                         <p>Play Group children enjoy the freedom of choice of abundance of activity
                                             materials under the guidance of well trained and caring teachers. Indoor and
